2009-10-12  Xiaomei Ji  <xji@chromium.org>

Reviewed by Sam Weinig.

        Fix issue caretRangeFromPoint() returns wrong result for a zoomed and
        scrolled page.
        https://bugs.webkit.org/show_bug.cgi?id=30034

        * fast/dom/Document/CaretRangeFromPoint/hittest-relative-to-viewport-expected.txt:
        * fast/dom/Document/CaretRangeFromPoint/hittest-relative-to-viewport.html:
        * fast/dom/elementFromPoint-relative-to-viewport-expected.txt:
        * fast/dom/elementFromPoint-relative-to-viewport.html:
2009-10-12  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Sam Weinig.

        Fix issue caretRangeFromPoint() returns wrong result for a zoomed and
        scrolled page.
        https://bugs.webkit.org/show_bug.cgi?id=30034

        * dom/Document.cpp:
        (WebCore::Document::elementFromPoint): calculate the correct point
        relative to document when the page is zoomed and scrolled.
        (WebCore::Document::caretRangeFromPoint): calculate the correct point
        relative to document when the page is zoomed and scrolled.

Canonical link: https://commits.webkit.org/40983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49490 268f45cc-cd09-0410-ab3c-d52691b4dbfc